correct overflow for codeblocks

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -538,6 +538,7 @@ li code {
 	padding: 10px;
 	font-size: 12px;
 	background: white;
+	overflow: hidden;
 }
 
 li code,
